--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     },
     "require": {
         "monolog/monolog": ">=2.0.0",
-        "psr/container": "^1.0"
+        "psr/container": "^1.0",
+        "psr/http-message": "^2.0",
+        "guzzlehttp/psr7": "^2.6"
     }
 }
